# data-platform-local

./: README.md  docker-compose.yaml  pyproject.toml  requirements.txt
samples/: sqlmodel_example.py
sourcedata/: create.sql  data.csv  insert.sql
sourcedata/super_mario_bros_one/: characters.csv  enemies.csv  powerboosters.csv  worlds.csv
