[tool.poetry]
name = "data-platform-local"
version = "0.1.0"
description = "Space to play with a modern data stack in the local environment."
authors = ["Jitse-Jan"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
